Updated style.css and README.md: adding padding to main-container class, value of padding right and padding left both set to 0 in order to remove extra white space on left and right side on the container and also updated issue and resolution section of README.md.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@ body{
     height: 100vh;
 }
 
+.main-container{
+    padding-right: 0;
+    padding-left: 0;
+}
+
 /*----- Navbar------------------------*/
 .bg-light {
   background-color: #24537005 !important;
